2010-06-26  Robert Larice
 * src/frontend/commands.c:
	NULL needs no cast

2010-06-26  Robert Larice
 * src/include/inpptree.h,
 * src/spicelib/parser/ifeval.c,
 * src/spicelib/parser/inpptree.c :
	 avoid function pointer warnings

2010-06-25  Robert Larice
 * src/frontend/com_hardcopy.c,
 * src/maths/sparse/spbuild.c,
 * src/maths/sparse/spfactor.c,
 * src/maths/sparse/spoutput.c,
 * src/maths/sparse/spsolve.c,
 * src/maths/sparse/sputils.c,
 * src/spicelib/analysis/dcop.c,
 * src/spicelib/parser/inppas1.c,
 * src/xspice/ipc/ipcsockets.c :
	remove redundant nested function declarations
	
2010-06-25  Robert Larice
 * src/frontend/hpgl.h,
 * src/frontend/parser/glob.c,
 * src/include/cpdefs.h,
 * src/include/cpstd.h,
 * src/include/fteext.h ;
	remove abandoned / nowhere-to-be-found non-ansi prototypes

2010-06-24  Robert Larice
 * src/main.c :
	make use of allready defined enumerate Ipc_Status_t (IPC_STATUS_OK)
 * src/xspice/icm/digital/d_and/cfunc.mod,
 * src/xspice/icm/digital/d_buffer/cfunc.mod,
 * src/xspice/icm/digital/d_fdiv/cfunc.mod,
 * src/xspice/icm/digital/d_inverter/cfunc.mod,
 * src/xspice/icm/digital/d_nand/cfunc.mod,,
 * src/xspice/icm/digital/d_nor/cfunc.mod,
 * src/xspice/icm/digital/d_open_c/cfunc.mod,
 * src/xspice/icm/digital/d_open_e/cfunc.mod,
 * src/xspice/icm/digital/d_or/cfunc.mod,,
 * src/xspice/icm/digital/d_xnor/cfunc.mod,
 * src/xspice/icm/digital/d_xor/cfunc.mod :
	make use of allready defined enumerate Digital_State_t (ONE,ZERO)

2010-06-23  Holger Vogt
 * configure.in, INSTALL, DEVICES, bsim3/b3ld.c, bsim3/b3set.c, bsim3/bsim3def.f,
   spinit.in: Multi-core support with OpenMP for BSIM3 vers. 3.3.0

2010-06-23  Robert Larice
 * src/ngmultidec.c,
 * src/frontend/inpcom.c,
 * src/frontend/help/help.c,
 * src/frontend/numparam/numpaif.h,
 * src/frontend/numparam/xpressn.c,
 * src/include/cpextern.h,
 * src/include/cpstd.h,
 * src/include/dgen.h,
 * src/include/ftedbgra.h,
 * src/include/fteext.h,
 * src/include/hlpdefs.h,